--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -2,6 +2,7 @@
   --text-color: #080808;
   --text-placeholder-color: rgb(107, 107, 107);
   --main-color: rgb(0, 106, 255);
+  --main-color-dark: rgb(0, 93, 223);
   --bg-color: rgb(243, 246, 248);
 }
 
@@ -22,7 +23,7 @@ body {
 
 /* <-- NAV --> */
 .nav {
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.134);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.134);
 
   background-color: white;
   display: flex;
@@ -62,6 +63,8 @@ body {
 }
 
 .navlink-right {
+  text-decoration: none;
+  background-color: white;
   font-size: 1.2rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-decoration: none;
@@ -78,6 +81,15 @@ body {
 
 .navlink-right:active {
   border: solid transparent 0.1rem;
+  background-color: var(--main-color);
+  color: white;
+  transition: 0.2s;
+}
+
+.navlink-right:focus {
+  background-color: var(--main-color);
+  color: white;
+  transition: 0.2s;
 }
 
 .drawer {
@@ -163,8 +175,10 @@ body {
     padding: 0;
     background-color: var(--bg-color);
     /* height: 100vh; */
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0.134);
   }
   .nav-left {
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.134);
     z-index: 1;
     display: flex;
     flex-direction: row;
