--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -34,6 +34,8 @@ body {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
+
+/* ================ LEFT ================== */
 .navlink-left {
   font-size: 1.2rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -62,6 +64,28 @@ body {
 .letter-blue {
   color: var(--main-color);
 }
+/* ================ /LEFT ================== */
+
+/* ================ Right ================== */
+
+/* .nav-right {
+  display: flex;
+  flex-direction: row;
+} */
+.nav-profile {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+#nav-profile-img {
+  margin: 1rem 1rem 0 1rem;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 10rem;
+}
 
 .navlink-right {
   text-decoration: none;
@@ -74,6 +98,7 @@ body {
   padding: 0.4rem;
   border: solid var(--main-color) 0.1rem;
   border-radius: 0.6rem;
+  height: fit-content;
 }
 
 .navlink-right:hover {
@@ -92,6 +117,7 @@ body {
   color: white;
   transition: 0.2s;
 }
+/* ================ /Right ================== */
 
 .drawer {
   font-size: 1rem;
@@ -144,7 +170,7 @@ body {
   border-radius: 10rem;
 }
 .post-body h3 {
-  margin: 0.6rem 1rem;
+  margin: 1.5rem 1rem 0 1rem;
 }
 .post-body h4 {
   margin: 0.6rem 1rem;
@@ -189,6 +215,20 @@ body {
 
 /* <== RESPONSIVE ==> */
 @media (max-width: 55rem) {
+  .navlink-logo {
+    font-size: 1.3rem;
+  }
+  .container {
+    transition: 0.3s;
+    width: 100vw;
+  }
+
+  #post-img {
+    width: 100%;
+    object-fit: cover;
+    max-height: 22rem;
+  }
+
   .nav {
     display: fixed;
     flex-direction: column;
@@ -204,33 +244,19 @@ body {
     flex-direction: row;
     justify-content: space-between;
     padding: 1.5rem;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     background-color: white;
   }
   .drawer {
     display: inline;
   }
+
+  /* element may be hidden when your  login or logout*/
   .navlink {
     display: block;
-    margin: 0.8rem 2rem;
+    margin: 0.8rem 3rem;
     padding: 0.5rem;
     width: fit-content;
     margin-top: -100%;
     font-size: 1.1rem;
-  }
-
-  .navlink-logo {
-    font-size: 1.3rem;
-  }
-  .container {
-    transition: 0.3s;
-    width: 100vw;
-  }
-
-  #post-img {
-    width: 100%;
-    object-fit: cover;
-    max-height: 22rem;
   }
 }
