finish the register image

--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -190,6 +190,9 @@ body {
   margin: 1rem 0.5rem 0.4rem 0.5rem;
 }
 
+#create-post-body {
+  resize: none;
+}
 /* ========== /Create post =========== */
 
 .post:last-child {
