--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -146,6 +146,7 @@ body {
   flex-direction: column;
 }
 #create-post button {
+  font-weight: 600;
   width: fit-content;
   right: 0;
   text-align: start;
@@ -283,7 +284,7 @@ body {
   display: none;
   border-top: solid 2px var(--bg-color);
 }
-#comments-count {
+.comments-count {
   text-align: end;
   font-size: 0.8rem;
   padding: 0.4rem;
