--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -4,6 +4,7 @@
   --main-color: rgb(0, 106, 255);
   --main-color-white: rgb(198, 219, 248);
   --main-color-dark: rgb(0, 93, 223);
+  --main-color-dark2: rgb(8, 25, 61);
   --bg-color: rgb(243, 246, 248);
 }
 
@@ -11,12 +12,12 @@ body {
   background-color: var(--bg-color);
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+  /* background-image: url(https://img.freepik.com/free-vector/hand-drawn-international-cat-day-background_23-2149487429.jpg?w=1800&t=st=1695972910~exp=1695973510~hmac=84edfe27c8c7885e45a5110c2a2bdce7249ca0ca4f3599dbfebf6400eb841de7); */
+  /* background-repeat: repeat; */
 }
 
 .container {
   transition: 0.3s;
-  background-color: var(--bg-color);
-  /* background-color: rgb(243, 246, 248); */
   width: 54rem;
   height: 100vw;
   margin: auto;
