--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -6,6 +6,7 @@
   --main-color-dark: rgb(0, 93, 223);
   --main-color-dark2: rgb(8, 25, 61);
   --bg-color: rgb(243, 246, 248);
+  --bg-color2: rgba(187, 222, 245, 0.791);
 }
 
 body {
@@ -382,7 +383,7 @@ body {
     flex-direction: column;
     justify-content: start;
     padding: 0;
-    background-color: var(--bg-color);
+    background-color: var(--bg-color2);
     box-shadow: 0 0 0 rgba(0, 0, 0, 0.134);
   }
   .nav-left {
