--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -39,8 +39,8 @@ body {
   flex-direction: row;
   justify-content: space-between;
   padding: 1.5rem 2rem;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  /* border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px; */
 }
 
 /* ================ LEFT ================== */
@@ -110,7 +110,7 @@ body {
 }
 
 .navlink-right:hover {
-  box-shadow: 0 0 2px var(--main-color);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.651);
 }
 
 .navlink-right:active {
