--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -413,6 +413,10 @@ body {
     margin-top: -100%;
     font-size: 1.1rem;
   }
+
+  .navlink-right {
+    background-color: rgba(255, 255, 255, 0.678);
+  }
 }
 
 /* ===================================== External Styles =====================================*/
@@ -421,10 +425,12 @@ body {
   /* margin: 1rem 0;
   margin: auto; */
   /* padding: auto; */
-  display: flex;
+  /* display: flex;
   flex-direction: column;
 
-  align-items: center;
+  align-items: center; */
+  width: fit-content;
+  margin: auto;
 }
 .loader {
   width: 48px;
